# rusty_coin

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/coin/: cashflow.rs  currency.rs  rates.rs
src/finance_mod/: cashflow.rs  currency.rs  fin_ratios.rs  mod.rs  rates.rs  value.rs
src/rc/: cashflow.rs  currency.rs  errors.rs  mod.rs  rates.rs  time_value_money.rs  value.rs
