[package]
name = "rusty_coin"
version = "0.2.2"
authors = ["sdrummeyjr <33046696+sdrummeyjr@users.noreply.github.com>"]
edition = "2018"
description = "Rust library containing a collection of financial functions and calculations."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
